<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="@dimen/dialog_add_marker_padding">

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_add_alarm_dialog_name"
        android:singleLine="true"/>

    <EditText
        android:id="@+id/address_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_add_alarm_dialog_address"
        android:singleLine="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dialog_text_padding"
        android:text="@string/label_add_alarm_dialog_choose_alarm_type"/>

    <CheckBox
        android:id="@+id/vibration_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_add_alarm_dialog_vibration"/>

    <CheckBox
        android:id="@+id/sound_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_add_alarm_dialog_sound"/>

    <CheckBox
        android:id="@+id/led_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_add_alarm_dialog_led"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/distance_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="@dimen/dialog_text_padding"
            android:text="@string/label_add_market_dialog_choose_distance"/>

        <Spinner
            android:id="@+id/distance_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>