<android.support.v7.widget.CardView
    android:id="@+id/card_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    card_view:cardBackgroundColor="@color/cardview_light_background"
    card_view:cardCornerRadius="@dimen/cardview_default_radius"
    card_view:cardElevation="@dimen/cardview_default_elevation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/card_layout_padding">

        <TextView
            android:id="@+id/name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:maxLines="1"
            android:padding="@dimen/card_text_padding"
            android:text="@string/label_card_name"/>

        <TextView
            android:id="@+id/address_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:maxLines="1"
            android:padding="@dimen/card_text_padding"
            android:text="@string/label_card_address"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/card_text_padding"
            android:text="@string/label_card_indication"/>

        <LinearLayout
            android:id="@+id/indication_layout"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/card_indication_margin"
            android:background="@null"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/label_card_vibration"/>

                <CheckBox
                    android:id="@+id/vibration_checkbox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="false"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/label_card_sound"/>

                <CheckBox
                    android:id="@+id/sound_checkbox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="false"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/label_card_led"/>

                <CheckBox
                    android:id="@+id/led_checkbox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="false"/>
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/distance_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:maxLines="1"
            android:padding="@dimen/card_text_padding"
            android:text="@string/label_card_distance"/>
    </LinearLayout>

</android.support.v7.widget.CardView>